--- a/musicmint/styles/pageStyles/index.module.css
+++ b/musicmint/styles/pageStyles/index.module.css
@@ -32,7 +32,7 @@
   .title {
     font-family:  'Lexend', sans-serif;
     justify-content: center;
-    font-size: 5rem;
+    font-size: 5.6rem;
     font-weight: bold;
     text-align: center;
     margin-top: 3rem;
@@ -77,6 +77,7 @@
     display: flex;
     height: 100vh;
     padding: 5rem 0;
+    margin-right: 2%;
   }
 
   .section2Left {
@@ -96,7 +97,7 @@
   .secondaryTitle {
     font-family: 'Lexend', sans-serif;
     justify-items: center;
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-weight: bold;
     margin-top: 3rem;
     margin-bottom: 1rem;
@@ -109,7 +110,7 @@
   .descriptionIntro{
     font-family: 'Lexend', sans-serif;
     justify-items: center;
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: bold;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -123,7 +124,7 @@
   .descriptionElab {
     font-family: 'Lexend', sans-serif;
     justify-items: center;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: bold;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -164,10 +165,10 @@
     width: 100%;
     height: 100vh;
     flex-direction: column;
-    padding: 6rem 0;
+    padding: 8rem 0;
     font-family: 'Lexend', sans-serif;
     justify-items: center;
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-weight: bold;
     margin-top: 1rem;
     /* margin-bottom: 1rem; */
@@ -180,4 +181,6 @@
     flex-direction: row;
     height: 400px;
     margin-top: 30px;
+    align-items: center;
+    justify-content: center;
   }
